[package]
name = "vhs"
version = "0.1.0"
edition = "2021"

[package.metadata.td-rs]
type = "top"

[lib]
name = "vhs"
crate-type = ["staticlib"]

[dependencies]
td-rs-top = { path = "../../td-rs-top" }
td-rs-derive = { path = "../../td-rs-derive" }
bytemuck = "1.14"
ntscrs = { git = "https://github.com/valadaptive/ntsc-rs" }
image = "0.24.9"
